--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -21,6 +21,10 @@ $white:#000;
 	src :url(../fonts_web/KozGoPro-Regular.otf)format("opentype");
 }
 @font-face{
+	font-family: kozG-B;
+	src :url(../fonts_web/KozGoPro-Bold.otf)format("opentype");
+}
+@font-face{
 	font-family: kozM-B;
 	src :url(../fonts_web/KozMinPro-Bold.otf)format("opentype");
 }
