--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@
   font-family: kozG-R;
   src: url(../fonts_web/KozGoPro-Regular.otf) format("opentype"); }
 @font-face {
+  font-family: kozG-B;
+  src: url(../fonts_web/KozGoPro-Bold.otf) format("opentype"); }
+@font-face {
   font-family: kozM-B;
   src: url(../fonts_web/KozMinPro-Bold.otf) format("opentype"); }
 @font-face {
@@ -93,10 +96,20 @@ header {
             color: rgba(0, 0, 0, 0.5); }
   header .main-visual {
     position: relative; }
-    header .main-visual img {
+    header .main-visual #hero1 {
       width: 100%;
       position: absolute;
       top: -150px; }
+    header .main-visual #hero2 {
+      width: 100%;
+      position: absolute;
+      top: 0px;
+      display: none; }
+    header .main-visual #hero3 {
+      width: 100%;
+      position: absolute;
+      top: -100px;
+      display: none; }
 
 .circles {
   position: fixed;
@@ -206,6 +219,8 @@ header {
     letter-spacing: 0.2em;
     line-height: 1.5;
     font-family: kozG-R; }
+    .contents2 p #person {
+      font-size: 10px; }
   .contents2 img {
     width: 800px; }
   .contents2 .con-img {
@@ -232,6 +247,8 @@ header {
       background-color: #888; }
     .webcontents .webmaga img {
       width: 100%; }
+      .webcontents .webmaga img:hover {
+        opacity: 0.5; }
 
 .stock {
   width: 100%;
