--- a/css/youth_article.css
+++ b/css/youth_article.css
@@ -35,43 +35,15 @@
   margin: 0;
   padding: 0; }
 
-.wrapper {
-  display: none; }
-
 .container {
-  width: 850px;
+  width: 950px;
   margin: 0 auto;
   overflow: hidden; }
 
 body {
   background-size: 100%;
-  background-position: center center; }
-
-.start {
-  width: 100%;
-  height: 100vh;
-  background-color: black;
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  text-align: center;
-  display: none; }
-  .start .batu {
-    position: absolute;
-    right: 40px;
-    top: 0;
-    color: #fff;
-    font-size: 50px;
-    cursor: pointer; }
-  .start img {
-    width: 550px;
-    margin: 30px 0; }
-  .start p {
-    color: #fff;
-    line-height: 2.4;
-    letter-spacing: 0.1em;
-    font-size: 1.3em;
-    font-family: KozM-H; }
+  background-position: center center;
+  font-family: KozG-R; }
 
 nav {
   position: fixed;
@@ -187,56 +159,38 @@ nav {
         font-size: 12px;
         margin-top: 3px; }
 
-main article {
-  margin-top: 100px; }
-  main article h3 {
-    text-align: center; }
-  main article h1 {
-    text-align: center;
-    width: 100%;
-    font-size: 120px;
-    margin-bottom: 80px; }
-  main article hr {
-    width: 850px;
-    margin: 0 auto;
-    margin-bottom: 30px; }
-  main article .person {
-    width: 350px;
-    float: left;
-    overflow: hidden;
-    margin-bottom: 50px; }
-    main article .person:nth-child(even) {
-      margin-right: 100px; }
-    main article .person .image {
-      width: 100%;
-      height: 250px;
-      overflow: hidden;
-      background-color: #d8d8d8; }
-    main article .person .text h5 {
-      font-size: 18px;
-      font-weight: normal;
-      padding: 10px 0 2px 0; }
-    main article .person .text h4 {
-      font-size: 24px;
-      font-weight: normal; }
-    main article .person .text p {
-      font-size: 12px; }
-  main article .p1 .image {
-    background-image: url(../img/enjinai_kiryu.jpg);
-    background-size: cover; }
-  main article .p2 .image {
-    background-image: url(../img/enjinai_ushio.jpg);
-    background-size: cover;
-    background-position: 0 30%; }
-  main article .p3 .image {
-    background-image: url(../img/enjinai_ibata.jpg);
-    background-size: cover; }
-  main article .p4 .image {
-    background-image: url(../img/enjinai_mori.jpg);
-    background-size: cover; }
-  main article .p5 .image {
-    background-image: url(../img/enjinai_ibata.jpg);
-    background-size: cover; }
+main .youth-hero {
+  width: 100%;
+  height: auto;
+  margin-top: 56px; }
+  main .youth-hero img {
+    width: 100%; }
+main h1 {
+  text-align: center;
+  margin-top: 40px; }
+main p {
+  text-align: center;
+  color: #888;
+  margin-bottom: 60px; }
+main .container p {
+  text-align: left;
+  color: #000;
+  letter-spacing: 0.01em;
+  line-height: 1.8;
+  font-size: 0.9em; }
+  main .container p a {
+    text-decoration: none; }
+main .container .share {
+  height: 100px;
+  overflow: hidden;
+  margin-bottom: 40px;
+  text-align: center; }
+main .container h3 {
+  text-align: center;
+  margin: 0 auto;
+  width: 700px;
+  font-size: 1.4em;
+  margin-bottom: 50px; }
 
 footer {
   width: 100%;
@@ -272,11 +226,11 @@ footer {
       color: #000; }
   footer p {
     text-align: center;
-    padding-top: 30px;
+    padding-top: 40px;
     font-size: 10px;
     letter-spacing: 0.2em; }
     footer p #c {
       font-size: 12px;
       margin-top: 3px; }
 
-/*# sourceMappingURL=enjinai.css.map */
+/*# sourceMappingURL=youth_article.css.map */
