--- a/scss/home.scss
+++ b/scss/home.scss
@@ -24,8 +24,16 @@ nav{
 	width: 100%;
 	z-index: 30;
 	height: 56px;
-	background-color: #fff;
-	box-shadow: 0px 0px 1px 1px #888;
+	// background-color: #fff;
+	-webkit-transition: all .25s ease;
+	   -moz-transition: all .25s ease;
+	    -ms-transition: all .25s ease;
+	     -o-transition: all .25s ease;
+	        transition: all .25s ease;
+	&:hover{
+		background-color: rgba(255,255,255,1);
+		// box-shadow: 0px 0px 1px 1px #888;
+	}
 	h3{
 		text-align: center;
 		padding-top: 8px;
@@ -292,9 +300,9 @@ main{
 		.img-home{
 			overflow: hidden;
 			height: 100%;
-			background-image: url("../img/home_bikes.jpg");
+			background-image: url("../img/home_isetan.jpg");
 			background-size: cover;
-			background-position: center center;
+			background-position: center 10%;
 			background-attachment:fixed;
 		}
 		.comment{
@@ -320,7 +328,7 @@ main{
 			overflow: hidden;
 			height: 100%;
 			width: 30%;
-			background-image: url("../img/home_bills.jpg");
+			background-image: url("../img/home_bike.jpg");
 			background-size: cover;
 			background-position: center center;
 			background-attachment:fixed;
