--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -106,7 +106,6 @@ nav{
 					color: #000;
 					// font-weight: bold;
 					font-size: 2.4em;
-					font-family: kozG-M;
 					line-height: 2;
 					-webkit-transition: color .25s ease;
 					   -moz-transition: color .25s ease;
@@ -155,20 +154,21 @@ nav{
 	}
 }
 
-.loop{
-	width: 100%;
+main{
+	position: relative;
 	height: 100vh;
-	z-index: 10;
+	width: 100%;
+	overflow: hidden;
 	top: 0;
-	position: fixed;
-	font-family: kozG-H;
 	.l-bar{
 		position: absolute;
 		left: 0;
 		top: 0;
+		z-index: 10;
 		height: 100%;
 		line-height: 100vh;
 		font-size: 2em;
+		font-weight: bold;
 		padding:0 15px;
 		color: rgba(0,0,0,0.8);
 		cursor: pointer;
@@ -187,9 +187,11 @@ nav{
 		position: absolute;
 		right: 0;
 		top: 0;
+		z-index: 10;
 		height: 100%;
 		line-height: 100vh;
 		font-size: 2em;
+		font-weight: bold;
 		padding:0 15px;
 		color: rgba(0,0,0,0.8);
 		cursor: pointer;
@@ -204,13 +206,6 @@ nav{
 		color: rgba(0,0,0,0.3);
 		}
 	}
-}
-
-main{
-	position: relative;
-	height: 100vh;
-	overflow: hidden;
-	top: 0;
 	.top{
 		width: 100%;
 		height: 100vh;
@@ -225,14 +220,16 @@ main{
 				font-size: 4.5em;
 				padding-top: 100px;		
 				width: 100%;
-				font-family: kozG-H;
+				font-family: kozG-M;
 				letter-spacing: 0.04em;
+				font-style: italic;
 			}
 			h2{
 				padding-top: 50px;
-				line-height: 3em;
+				line-height: 2.5em;
+				font-size: 1.3em;
 				width: 100%;
-				font-family: kozG-H;
+				font-family: kozG-R;
 			}
 		}
 	}
@@ -243,35 +240,45 @@ main{
 		left: 0;
 		display: none;
 		position:absolute;
-		background-image: url(../img/youth_inada.jpg);
+		background-image: url(../img/youth_inada2.jpg);
 		background-size: cover;
-		h1{
-			font-size: 4em;
+		h3{
+			font-size: 1.3em;
 			position: absolute;
+			letter-spacing: 0.1em;
 			top: 100px;
-			left: 30px;
+			left: 100px;
+			font-family: KozG-B;
+			#name{
+				font-size: 1.4em;
+			}
 		}
-		h2{
+		h4{
 			position:absolute;
 			bottom: 30px;
-			left: 50px;
+			left: 100px;
+			letter-spacing: 0.1em;
 			font-size: 1.5em;
+			font-family: KozG-R;
 			a{
 				color: #000;
+				&:hover{
+					color:#fff;
+				}
 			}
 		}
 		p{
 			width: 500px;
 			box-sizing:border-box;
 			padding: 30px;
-			background-color: rgba(255,255,255,0.5);
+			background-color: rgba(255,255,255,1);
 			font-size: 0.9em;
-			letter-spacing: 0.2em;
+			letter-spacing: 0;
 			position: absolute;
 			bottom: 30px;
-			right: 50px;
+			right: 100px;
+			font-family: KozG-M;
 		}
-
 	}
 	.stylist{
 		width: 100%;
@@ -280,22 +287,26 @@ main{
 		left: 0;
 		display: none;
 		position:absolute;
-		background-image: url(../img/youth_inada2.jpg);
+		background-image: url(../img/youth_hattori2.jpg);
 		background-size: cover;
-		h1{
+		h3{
 			font-size: 4em;
-			width: 350px;
 			position: absolute;
+			letter-spacing: 0.1em;
 			top: 100px;
-			right: 30px;
+			right: 100px;
+			font-family: KozG-H;
 		}
-		h2{
+		h4{
 			position:absolute;
 			bottom: 30px;
-			right: 50px;
+			right: 100px;
 			font-size: 1.5em;
 			a{
-				color: #000;
+				color: #fff;
+				&:hover{
+					color: #000;
+				}
 			}
 		}
 		p{
@@ -304,10 +315,11 @@ main{
 			padding: 30px;
 			background-color: rgba(255,255,255,0.5);
 			font-size: 0.9em;
-			letter-spacing: 0.2em;
+			letter-spacing: 0;
 			position: absolute;
 			bottom: 30px;
-			left: 50px;
+			left: 100px;
+			font-family: KozG-R;
 		}
 	}
 	.dareka{
